Time: 36 ms (30.64%) | Memory: 59.2 MB (46.00%) - LeetSync